force-app/main/default/objects/Exam_Question__c/Exam_Question__c.object-meta.xml
<CustomObject>
    <label>Exam Question</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Exam Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>