force-app/main/default/objects/Exam_Question__c/fields/Answer_A__c.field-meta.xml
<CustomField>
    <fullName>Answer_A__c</fullName>
    <label>Answer A</label>
    <type>TextArea</type>
</CustomField>