force-app/main/default/objects/Exam_Question__c/fields/Answer_B__c.field-meta.xml
<CustomField>
    <fullName>Answer_B__c</fullName>
    <label>Answer B</label>
    <type>TextArea</type>
</CustomField>