force-app/main/default/objects/Exam_Question__c/fields/Answer_C__c.field-meta.xml
<CustomField>
    <fullName>Answer_C__c</fullName>
    <label>Answer C</label>
    <type>TextArea</type>
</CustomField>