force-app/main/default/objects/Exam_Question__c/fields/Answer_D__c.field-meta.xml
<CustomField>
    <fullName>Answer_D__c</fullName>
    <label>Answer D</label>
    <type>TextArea</type>
</CustomField>