force-app/main/default/objects/Exam_Question__c/fields/Answer_E__c.field-meta.xml
<CustomField>
    <fullName>Answer_E__c</fullName>
    <label>Answer E</label>
    <type>TextArea</type>
</CustomField>