force-app/main/default/objects/Exam_Question__c/fields/Answer_F__c.field-meta.xml
<CustomField>
    <fullName>Answer_F__c</fullName>
    <label>Answer F</label>
    <type>TextArea</type>
</CustomField>