force-app/main/default/objects/Exam_Question__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The exam for which this question is related</description>
    <label>Certification</label>
    <referenceTo>SF_Certification__c</referenceTo>
    <relationshipLabel>Exam Questions</relationshipLabel>
    <relationshipName>Exam_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>