force-app/main/default/objects/Exam_Question__c/fields/Correct_Answers__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answers__c</fullName>
    <description>The correct answers for a multiple selection question with multiple answers. All answers must be selected correctly for the question to be answered correctly</description>
    <label>Correct Answers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>