force-app/main/default/objects/Exam_Question__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <description>Provides an explanation for the correct answer (and optionally why the incorrect answers are incorrect)</description>
    <label>Explanation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>