force-app/main/default/objects/Exam_Question__c/fields/Full_Question__c.field-meta.xml
<CustomField>
    <fullName>Full_Question__c</fullName>
    <description>Displays the text of the full question. 

Some questions may have more exposition to describe the details/scenario for the question.</description>
    <label>Full Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>