force-app/main/default/objects/Exam_Question__c/fields/Num_Answers__c.field-meta.xml
<CustomField>
    <fullName>Num_Answers__c</fullName>
    <description>Displays the number of answers that are populated in the answer</description>
    <formula>IF(NOT(ISBLANK(Answer_A__c)), 1, 0)
+ IF(NOT(ISBLANK(Answer_B__c)), 1, 0)
+ IF(NOT(ISBLANK(Answer_C__c)), 1, 0)
+ IF(NOT(ISBLANK(Answer_D__c)), 1, 0)
+ IF(NOT(ISBLANK(Answer_E__c)), 1, 0)
+ IF(NOT(ISBLANK(Answer_F__c)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Answers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>