force-app/main/default/objects/Exam_Question__c/fields/Num_Correct_Answers__c.field-meta.xml
<CustomField>
    <fullName>Num_Correct_Answers__c</fullName>
    <label>Num Correct Answers</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>