force-app/main/default/objects/Exam_Question__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of where the question came from (Focus on Force, User Created, AI generated, Other platform)</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>