force-app/main/default/objects/Exam_Question__c/fields/Sources__c.field-meta.xml
<CustomField>
    <fullName>Sources__c</fullName>
    <description>List of sources (weblinks or other) that can be referenced to learn more about the correct/incorrect answers</description>
    <label>Sources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>