force-app/main/default/objects/Exam_Question__c/fields/Trailhead_Links__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Links__c</fullName>
    <description>Trailhead url links and details applicable to the question and it&apos;s answer(s)</description>
    <label>Trailhead Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>