force-app/main/default/objects/Exam_Question__c/recordTypes/Multi_Select.recordType-meta.xml
<RecordType>
    <fullName>Multi_Select</fullName>
    <active>true</active>
    <description>Models a question that has multiple correct answers, requires all answers to be selected to be correct</description>
    <label>Multi Select</label>
</RecordType>