force-app/main/default/objects/Exam_Question__c/recordTypes/Multiple_Choice.recordType-meta.xml
<RecordType>
    <fullName>Multiple_Choice</fullName>
    <active>true</active>
    <description>Used for a standard multiple choice question with one correct answer</description>
    <label>Multiple Choice</label>
</RecordType>